-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.3.0-rc
-
Windows 7 64bit SP1
MSVS 2010 Express, Debugging Tools for Windows (x64), MingGW (provided by QtCreator)
-
8c6c7ce32f4f07ccad4c9a15c2e273832c8cf1b4
After successfully building debug helpers most of the buttons (for rebuilding them) are disabled.
(See attached png)
Steps to reproduce:
- Open Menu->Tools->Options...
- Switch to Qt4
- Select one of the listed Qt versions
- open the Details view at the bottom
- Select Build All (or something else - except Build for the QML Dump)