src/plugins/qtsupport/debugginghelperbuildtask.cpp
@@ -165,8 +165,8 @@ void DebuggingHelperBuildTask::run(QFutureInterface<void> &future)
         log(result, QString());
     }
 
-    emit updateQtVersions(m_qmakeCommand);
     emit finished(m_qtId, m_log, m_tools);
+    emit updateQtVersions(m_qmakeCommand);
     deleteLater();
 }
 
